--- a/ElibraryManagement/Site1.Master
+++ b/ElibraryManagement/Site1.Master
@@ -71,7 +71,7 @@
                         </li>
 
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" Visible="false">Hello user</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" Visible="false" OnClick="LinkButton7_Click">Hello user</asp:LinkButton>
 
                         </li>
                     </ul>
